# MiniSQL

./: .gitignore  CMakeLists.txt  MiniSQL.pro  README.md  api.cpp  api.h  b_plus_tree.h  btree.cpp  btree.h  buffer_manager.cpp  buffer_manager.h  catalog_manager.cpp  catalog_manager.h  dbms.cpp  dbms.h  exception.cpp  exception.h  index_manager.cpp  index_manager.h  interpreter.cpp  interpreter.h  main.cpp  query.h  record_manager.cpp  record_manager.h  result.h  table.h  value_pointer.h
doc/: 总体设计报告.md  软件需求报告.md
src/MiniSQL/: MiniSQL.cpp
src/core/: api.cpp  api.hpp  b_plus_tree.hpp  buffer_manager.cpp  buffer_manager.hpp  catalog_manager.cpp  catalog_manager.hpp  dbms.cpp  dbms.hpp  index_manager.cpp  index_manager.hpp  interpreter.cpp  interpreter.hpp  record_manager.cpp  record_manager.hpp  result.hpp  table.hpp
